--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:watch": "jest --watch",
     "lint": "eslint \"src/**/*.{ts,html}\" --fix",
     "format": "prettier --write \"src/**/*.{ts,html,scss,json}\"",
-    "prepare": "husky install"
+    "postinstall": "husky"
   },
   "private": true,
   "dependencies": {
@@ -47,7 +47,7 @@
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "husky": "^9.0.0",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-preset-angular": "^13.0.0",
     "lint-staged": "^15.0.0",
